fixed text-overflow using a media query at height sub 1100px

--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -640,3 +640,11 @@ header::after{
         display: none;
     }
 }
+@media (max-height: 1100px) {
+    .banner-Text h1{
+        font-size: 3.5rem;
+    }
+    .banner-Text h2{
+        font-size: 2.4rem;
+    }
+}
